# cc-status-line

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.claude/agents/: browser-research.md  docs-update.md  git.md  todo-update.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
bash/: install.sh  statusline.sh
benches/: benchmarks.rs
docs/: statusline-preview.sh
docs/screenshots/: README.md
rust/: Cargo.toml  bench-hyperfine.sh  bench.sh  test.sh
rust/src/: main.rs
scripts/: screenshots.sh
src/: lib.rs  main.rs
tests/: integration.rs
