[package]
name = "cc-statusline"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.66", default-features = false, features = ["index", "revision"] }
memmap2 = "0.9"
libc = "0.2"
ureq = "2.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
