[package]
name = "cc-statusline"
version = "0.1.7"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.66", default-features = false, features = ["index", "revision"] }
memmap2 = "0.9"
libc = "0.2"
ureq = { version = "2.12", default-features = false, features = ["native-tls"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
